@@ -2,9 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.corundumstudio.socketio</groupId>
-  <artifactId>netty-socketio</artifactId>
+  <artifactId>netty-socketio-parent</artifactId>
   <version>2.0.14-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>pom</packaging>
   <name>NettySocketIO</name>
   <description>Socket.IO server implemented on Java</description>
   <inceptionYear>2012</inceptionYear>
@@ -16,6 +16,15 @@
     <developerConnection>scm:git:git@github.com:mrniko/netty-socketio.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+
+  <modules>
+    <module>netty-socketio-core</module>
+    <module>netty-socketio-spring</module>
+    <module>netty-socketio-spring-boot-starter</module>
+    <module>netty-socketio-quarkus</module>
+    <module>netty-socketio-micronaut</module>
+    <module>netty-socketio-smoke-test</module>
+  </modules>
 
   <licenses>
     <license>
@@ -49,8 +58,22 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <skipTests>true</skipTests>
-    <netty.version>4.1.119.Final</netty.version>
+    <testcontainers.version>1.21.3</testcontainers.version>
+    <netty.version>4.2.7.Final</netty.version>
+    <jmockit.version>1.49</jmockit.version>
+    <byte-buddy.version>1.18.1</byte-buddy.version>
+    <junit.version>5.10.1</junit.version>
+    <junit-platform-launcher.version>1.10.1</junit-platform-launcher.version>
+    <slf4j.version>2.0.16</slf4j.version>
+    <jackson.version>2.18.3</jackson.version>
+    <redisson.version>3.45.1</redisson.version>
+    <hazelcast.version>3.12.12</hazelcast.version>
+    <awaitility.version>4.2.0</awaitility.version>
+    <assertj.version>3.24.2</assertj.version>
+    <mockito.version>5.7.0</mockito.version>
+    <logback.version>1.5.18</logback.version>
+    <socketio.version>2.1.0</socketio.version>
+    <javafaker.version>1.0.2</javafaker.version>
   </properties>
 
   <profiles>
@@ -75,10 +98,10 @@
                       <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                     </manifest>
                     <manifestEntries>
-                      <Implementation-Build>${implementation.build}</Implementation-Build>
+<!--                      <Implementation-Build>${implementation.build}</Implementation-Build>-->
                       <Implementation-Build-Date>${maven.build.timestamp}</Implementation-Build-Date>
-                      <X-Compile-Source-JDK>${javac.src.version}</X-Compile-Source-JDK>
-                      <X-Compile-Target-JDK>${javac.target.version}</X-Compile-Target-JDK>
+<!--                      <X-Compile-Source-JDK>${javac.src.version}</X-Compile-Source-JDK>-->
+<!--                      <X-Compile-Target-JDK>${javac.target.version}</X-Compile-Target-JDK>-->
                     </manifestEntries>
                   </archive>
                 </configuration>
@@ -94,7 +117,7 @@
                 <id>sign-artifacts</id>
                 <phase>verify</phase>
                 <goals>
-                  <goal>sign</goal>
+<!--                  <goal>sign</goal>-->
                 </goals>
               </execution>
             </executions>
@@ -129,112 +152,207 @@
           <classifier>linux-aarch_64</classifier>
           <version>${netty.version}</version>
         </dependency>
+          <dependency>
+              <groupId>io.netty</groupId>
+              <artifactId>netty-transport-native-io_uring</artifactId>
+              <classifier>linux-x86_64</classifier>
+              <version>${netty.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>io.netty</groupId>
+              <artifactId>netty-transport-native-io_uring</artifactId>
+              <classifier>linux-aarch_64</classifier>
+              <version>${netty.version}</version>
+          </dependency>
       </dependencies>
     </profile>
+      <profile>
+          <!-- Dynamically depend on kqueue only on macOS -->
+          <id>macOS</id>
+          <activation>
+              <os>
+                  <name>Mac OS X</name>
+                  <family>mac</family>
+              </os>
+          </activation>
+
+          <dependencies>
+              <dependency>
+                  <groupId>io.netty</groupId>
+                  <artifactId>netty-transport-native-kqueue</artifactId>
+                  <classifier>osx-x86_64</classifier>
+                  <version>${netty.version}</version>
+              </dependency>
+              <dependency>
+                  <groupId>io.netty</groupId>
+                  <artifactId>netty-transport-native-kqueue</artifactId>
+                  <classifier>osx-aarch_64</classifier>
+                  <version>${netty.version}</version>
+              </dependency>
+          </dependencies>
+      </profile>
+
   </profiles>
 
-  <dependencies>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-buffer</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-common</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-handler</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-codec-http</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-codec</artifactId>
-      <version>${netty.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport-native-epoll</artifactId>
-      <version>${netty.version}</version>
-      <scope>provided</scope>
-    </dependency>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>${testcontainers.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-buffer</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-common</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-transport</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-handler</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-codec-http</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-codec</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-transport-native-epoll</artifactId>
+        <version>${netty.version}</version>
+        <scope>provided</scope>
+      </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport-native-io_uring</artifactId>
+            <version>${netty.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-transport-native-kqueue</artifactId>
+            <version>${netty.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
-    <dependency>
-      <groupId>org.jmockit</groupId>
-      <artifactId>jmockit</artifactId>
-      <version>1.49</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>2.0.16</version>
-    </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
 
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.18.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.18.3</version>
-    </dependency>
+      <dependency>
+        <groupId>org.redisson</groupId>
+        <artifactId>redisson</artifactId>
+        <version>${redisson.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.hazelcast</groupId>
+        <artifactId>hazelcast-client</artifactId>
+        <version>${hazelcast.version}</version>
+        <scope>provided</scope>
+      </dependency>
 
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-beans</artifactId>
-      <version>[6.0.16,)</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-core</artifactId>
-      <version>[6.0.16,)</version>
-      <exclusions>
-        <exclusion>
-          <groupId>commons-logging</groupId>
-          <artifactId>commons-logging</artifactId>
-        </exclusion>
-      </exclusions>
-      <scope>provided</scope>
-    </dependency>
-
-
-    <dependency>
-      <groupId>org.redisson</groupId>
-      <artifactId>redisson</artifactId>
-      <version>3.45.1</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.hazelcast</groupId>
-      <artifactId>hazelcast-client</artifactId>
-      <version>3.12.12</version>
-      <scope>provided</scope>
-    </dependency>
-  </dependencies>
+      <!-- Test dependencies -->
+      <dependency>
+        <groupId>org.jmockit</groupId>
+        <artifactId>jmockit</artifactId>
+        <version>${jmockit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy-agent</artifactId>
+        <version>${byte-buddy.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-launcher</artifactId>
+        <version>${junit-platform-launcher.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.awaitility</groupId>
+        <artifactId>awaitility</artifactId>
+        <version>${awaitility.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${assertj.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- Socket.IO client for testing -->
+      <dependency>
+        <groupId>io.socket</groupId>
+        <artifactId>socket.io-client</artifactId>
+        <version>${socketio.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+      <dependency>
+        <groupId>com.github.javafaker</groupId>
+        <artifactId>javafaker</artifactId>
+        <version>${javafaker.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
 
   <build>
@@ -320,12 +438,11 @@
         <configuration>
           <linkXref>true</linkXref>
           <minimumTokens>100</minimumTokens>
-          <targetJdk>1.6</targetJdk>
+          <targetJdk>1.8</targetJdk>
           <verbose>true</verbose>
         </configuration>
       </plugin>
 
-<!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -345,7 +462,6 @@
           <excludes>**/module-info.java</excludes>
         </configuration>
       </plugin>
--->
 
       <plugin>
         <!-- this trick double-compiles everything so we can have a module-info.class
@@ -411,8 +527,21 @@
         <version>3.2.5</version>
         <configuration>
           <argLine>
-            -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.46/jmockit-1.46.jar
+            -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
+            <!--For Java 25 support of byte-buddy. Byte-buddy is currently only used in mockito on unit tests within this project, so mitigate this problem by enabling this property-->
+            -Dnet.bytebuddy.experimental=true
+            -javaagent:"${settings.localRepository}"/net/bytebuddy/byte-buddy-agent/${byte-buddy.version}/byte-buddy-agent-${byte-buddy.version}.jar
+            --add-opens netty.socketio/com.corundumstudio.socketio.store.pubsub=ALL-UNNAMED
+            --add-opens netty.socketio/com.corundumstudio.socketio.store=ALL-UNNAMED
+            --add-opens netty.socketio/com.corundumstudio.socketio.store.pubsub=redisson
+            --add-opens netty.socketio/com.corundumstudio.socketio.store=redisson
           </argLine>
+          <includes>
+            <include>**/*Test.java</include>
+            <include>**/*Tests.java</include>
+          </includes>
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
 
@@ -440,7 +569,7 @@
         <version>2.6</version>
         <configuration>
           <basedir>${basedir}</basedir>
-          <header>${basedir}/header.txt</header>
+          <header>${maven.multiModuleProjectDirectory}/header.txt</header>
           <quiet>false</quiet>
           <failIfMissing>true</failIfMissing>
           <aggregate>false</aggregate>
